--- a/results/jb_d.tex
+++ b/results/jb_d.tex
@@ -1,8 +1,12 @@
-\begin{tabular}{lrrrrrr}
+\begin{tabular}{lrr}
 \toprule
-{} &  S\&PCOMP(RI) &  MLGTRSA(RI) &  MLCORPM(RI) &  WILURET(RI) &  RJEFCRT(TR) &    JPUSEEN \\
+{} &  JBTest daily &        CV \\
 \midrule
-JBTest &    29618.647 &    2953.1014 &   14512.9177 &  126690.9301 &    7640.9619 &  4163.8809 \\
-pvalue &        0.000 &       0.0000 &       0.0000 &       0.0000 &       0.0000 &     0.0000 \\
+S\&PCOMP(RI) &       29619.0 &  5.991465 \\
+MLGTRSA(RI) &        2953.0 &  5.991465 \\
+MLCORPM(RI) &       14513.0 &  5.991465 \\
+WILURET(RI) &      126691.0 &  5.991465 \\
+RJEFCRT(TR) &        7641.0 &  5.991465 \\
+JPUSEEN     &        4164.0 &  5.991465 \\
 \bottomrule
 \end{tabular}
