--- a/results/jb_w.tex
+++ b/results/jb_w.tex
@@ -1,8 +1,12 @@
-\begin{tabular}{lrrrrrr}
+\begin{tabular}{lrr}
 \toprule
-{} &  S\&PCOMP(RI) &  MLGTRSA(RI) &  MLCORPM(RI) &  WILURET(RI) &  RJEFCRT(TR) &   JPUSEEN \\
+{} &  JBTest weekly &      CV \\
 \midrule
-JBTest &    2835.0599 &     117.9339 &   32097.7353 &    7552.7169 &    1022.5719 &  389.3403 \\
-pvalue &       0.0000 &       0.0000 &       0.0000 &       0.0000 &       0.0000 &    0.0000 \\
+S\&PCOMP(RI) &         2835.0 &  5.9915 \\
+MLGTRSA(RI) &          118.0 &  5.9915 \\
+MLCORPM(RI) &        32098.0 &  5.9915 \\
+WILURET(RI) &         7553.0 &  5.9915 \\
+RJEFCRT(TR) &         1023.0 &  5.9915 \\
+JPUSEEN     &          389.0 &  5.9915 \\
 \bottomrule
 \end{tabular}
