bugfix: missed2 in variable name

--- a/results/ljb_weekly_squared.tex
+++ b/results/ljb_weekly_squared.tex
@@ -1,16 +1,16 @@
-\begin{tabular}{lr}
+\begin{tabular}{lrrrrrrr}
 \toprule
-{} &  Critical Value \\
+{} &  S\&PCOMP(RI) &  MLGTRSA(RI) &  MLCORPM(RI) &  WILURET(RI) &  RJEFCRT(TR) &     JPUSEEN &  Critical Value \\
 \midrule
-1  &        3.841459 \\
-2  &        5.991465 \\
-3  &        7.814728 \\
-4  &        9.487729 \\
-5  &       11.070498 \\
-6  &       12.591587 \\
-7  &       14.067140 \\
-8  &       15.507313 \\
-9  &       16.918978 \\
-10 &       18.307038 \\
+1  &   105.717786 &    25.253566 &   414.962638 &   290.147031 &    66.618454 &   93.291291 &        3.841459 \\
+2  &   137.605418 &    45.641171 &   461.384776 &   441.249832 &    91.428499 &  144.814610 &        5.991465 \\
+3  &   249.935206 &    66.797450 &   474.575893 &   709.195123 &   122.619045 &  177.924990 &        7.814728 \\
+4  &   275.545609 &    93.743954 &   479.370537 &   816.816081 &   154.324633 &  194.598118 &        9.487729 \\
+5  &   282.887320 &   106.398714 &   479.684821 &   863.808086 &   171.247669 &  206.356764 &       11.070498 \\
+6  &   306.269492 &   113.013522 &   479.697451 &   896.172362 &   218.762044 &  223.596029 &       12.591587 \\
+7  &   338.719625 &   114.771853 &   479.769445 &   917.557567 &   242.426529 &  251.907730 &       14.067140 \\
+8  &   341.886062 &   133.188181 &   479.909207 &   945.449510 &   297.854592 &  269.042164 &       15.507313 \\
+9  &   343.324632 &   139.261969 &   480.092486 &   952.484094 &   338.040301 &  315.167209 &       16.918978 \\
+10 &   344.576435 &   139.566951 &   480.925109 &   955.497446 &   350.407668 &  332.701850 &       18.307038 \\
 \bottomrule
 \end{tabular}
