bugfix: xaxis autocorr

--- a/results/describe_w_port.tex
+++ b/results/describe_w_port.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{lr}
 \toprule
-{} &        0 \\
+{} &  EW Portfolio \\
 \midrule
-Ann. mean &   0.0613 \\
-Ann. var  &   0.0059 \\
-skew      &  -0.8794 \\
-kurt      &  15.9106 \\
-min       &  -0.0944 \\
-max       &   0.0702 \\
+Ann. mean &        0.0613 \\
+Ann. var  &        0.0059 \\
+skew      &       -0.8794 \\
+kurt      &       15.9106 \\
+min       &       -0.0944 \\
+max       &        0.0702 \\
 \bottomrule
 \end{tabular}
