--- a/results/describe_d_port.tex
+++ b/results/describe_d_port.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{lr}
 \toprule
-{} &        0 \\
+{} &  EW Portfolio \\
 \midrule
-Ann. mean &   0.0607 \\
-Ann. var  &   0.0066 \\
-skew      &  -0.5710 \\
-kurt      &  19.6058 \\
-min       &  -0.0563 \\
-max       &   0.0462 \\
+Ann. mean &        0.0607 \\
+Ann. var  &        0.0066 \\
+skew      &       -0.5710 \\
+kurt      &       19.6058 \\
+min       &       -0.0563 \\
+max       &        0.0462 \\
 \bottomrule
 \end{tabular}
